# zodb-s3blobs

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  Makefile  README.md  RELEASE.md  instance.yaml  mx.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  qa.yaml  release.yaml  tests.yaml
src/zodb_s3blobs/: __init__.py  cache.py  component.xml  config.py  interfaces.py  s3client.py  storage.py
tests/: test_cache.py  test_config.py  test_integration.py  test_s3client.py  test_storage.py
